<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee Ordering</string>

    <!-- The toppings will be added in the activity_main.xml -->
    <string name="toppings">Toppings</string>

    <!-- The Thank You message in the order summary -->
    <string name="thank_you">Thank You</string>
    <string name="name">Name</string>
    <string name="price">Total Price</string>
    <string name="whip">Whipping Cream</string>
    <string name="order_button">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="quantity_button">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_summary_name">Name:<xliff:g id="name">%s</xliff:g></string>
</resources>
