<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="16dp"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_marginBottom="16dp"
        android:paddingLeft="10dp"
        android:paddingTop="16dp"
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"/>

    <CheckBox
        android:id = "@+id/whip_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/whip"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:onClick="onTop"/>

    <CheckBox
        android:id = "@+id/add_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:layout_marginLeft="10dp"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:onClick="onTop"/>

    <TextView
        android:id="@+id/text1"
        android:layout_marginBottom="16dp"
        android:paddingLeft="10dp"
        android:paddingTop="16dp"
        android:text="@string/quantity_button"
        style="@style/HeaderTextStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />

    </LinearLayout>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="10dp"
        android:paddingTop="16dp"
        android:text="@string/order_summary"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/summary_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="$5"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order_button" />

</LinearLayout>
</ScrollView>